<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eslamjava.tripplanner.TripDetailesActivity">




    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/textView100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tripName"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/tripNameDetaileEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:editable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:hint="@string/enterTripName"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColorLink="@color/common_google_signin_btn_text_dark_focused" />
        <TextView
            android:id="@+id/textView101"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startPoint"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/startPointDetailEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:clickable="false"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:hint="@string/enterStartPoint"
            android:inputType="none"
            android:editable="false" />
        <TextView
            android:id="@+id/textView102"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Destination"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/destinationDetailEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enterEndPoint"
            android:inputType="none"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/textView103"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/dateDetailEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:ems="10"
            android:inputType="none"
            android:paddingLeft="20dp"
            />
        <TextView
            android:id="@+id/textView104"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/time"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:id="@+id/timeDetailEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:clickable="false"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:ems="10"
            android:inputType="none"
            android:paddingLeft="20dp" />
        <TextView
            android:id="@+id/textView105"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/notesDetailEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterNots"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/textView106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/oneWay" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout6"
            android:id="@+id/linearLayout7">

            <Switch
                android:id="@+id/switch1Detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="0.00"
                android:width="125dp"
                android:clickable="false"
                android:editable="false"
                android:focusableInTouchMode="false"
                tools:targetApi="ice_cream_sandwich" />

            <TextView
                android:id="@+id/textView107"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/roundTrip" />
        </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"
        android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout7"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteDetaileBtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:clickable="false"
                android:background="@drawable/buttondesign"
                android:layout_alignParentBottom="true"
                />
        </LinearLayout>
    </GridLayout>






</ScrollView>
